--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "semi" : [2,"always"]
+    }
   },
   "browserslist": {
     "production": [
