--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "midi-sounds-react": "^1.2.54",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-soundfont-player": "^1.0.2",
+    "soundfont-player": "^0.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,7 +22,10 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-      "semi" : [2,"always"]
+      "semi": [
+        2,
+        "always"
+      ]
     }
   },
   "browserslist": {
