--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "soundfont-player": "^0.12.0"
+    "soundfont-player": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
